--- a/boards/etee/etee_dongle_uf2/etee_dongle_uf2.dts
+++ b/boards/etee/etee_dongle_uf2/etee_dongle_uf2.dts
@@ -11,6 +11,7 @@
 			psels = <NRF_PSEL(PWM_OUT0, 1, 9)>,
 				<NRF_PSEL(PWM_OUT1, 1, 15)>,
 				<NRF_PSEL(PWM_OUT2, 0, 7)>;
+			nordic,drive-mode = <NRF_DRIVE_D0S1>;
 			nordic,invert;
 		};
 	};
