--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,15 @@ permissions: write-all
 
 jobs:
   build:
+    strategy:
+      matrix:
+        boards: [
+                  {boardname: "nrf52840dongle/nrf52840", fileformat: "hex", filename: "SlimeNRF_Nordic_eByte_Dongle_Receiver.hex"}, 
+                  {boardname: "supermini_uf2/nrf52840", fileformat: "uf2", filename: "SlimeNRF_SuperMini_Receiver.uf2"}, 
+                  {boardname: "xiao_ble/nrf52840", fileformat: "uf2", filename: "SlimeNRF_XIAO_Receiver.uf2"}, 
+                  {boardname: "etee_dongle_uf2/nrf52840", fileformat: "uf2", filename: "SlimeNRF_etee_Receiver.uf2"}, 
+                  {boardname: "nrf52840dk/nrf52840", fileformat: "hex", filename: "SlimeNRF_nRF52840dk_Receiver.hex"}, 
+                ]
     if: always()
     runs-on: ubuntu-latest
     steps:
@@ -89,8 +98,8 @@ jobs:
           cd zephyr-workspace
           pip3 install -r zephyr/scripts/requirements.txt
 
-      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - Nordic_eByte_Dongle
-      # Receiver Firmware Build for Nordic_eByte Dongle
+      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - ${{ matrix.boards.boardname }}
+      # Receiver Firmware Build 
         if: always()
         run: |
           cd zephyr-workspace
@@ -103,129 +112,20 @@ jobs:
           mkdir SlimeVR-Tracker-nRF-Receiver/build
 
           west build \
-              --board nrf52840dongle/nrf52840 \
+              --board ${{ matrix.boards.boardname }} \
               --pristine=always SlimeVR-Tracker-nRF-Receiver \
               --build-dir SlimeVR-Tracker-nRF-Receiver/build \
               -- \
               -DNCS_TOOLCHAIN_VERSION=NONE \
               -DBOARD_ROOT=../SlimeVR-Tracker-nRF-Receiver
 
-          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.hex Releases/SlimeNRF_Nordic_eByte_Dongle_Receiver.hex
+          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.${{ matrix.boards.fileformat }} Releases/${{ matrix.boards.filename }}
 
-      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - SuperMini
-      # Receiver Firmware Build for SuperMini
-        if: always()
-        run: |
-          cd zephyr-workspace
-          sudo rm -rf SlimeVR-Tracker-nRF-Receiver/build
-          mkdir SlimeVR-Tracker-nRF-Receiver/build
-
-          west build \
-              --board supermini_uf2/nrf52840 \
-              --pristine=always SlimeVR-Tracker-nRF-Receiver \
-              --build-dir SlimeVR-Tracker-nRF-Receiver/build \
-              -- \
-              -DNCS_TOOLCHAIN_VERSION=NONE \
-              -DBOARD_ROOT=../SlimeVR-Tracker-nRF-Receiver
-
-          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.uf2 Releases/SlimeNRF_SuperMini_Receiver.uf2
-
-      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - XIAO
-      # Receiver Firmware Build for XIAO
-        if: always()
-        run: |
-          cd zephyr-workspace
-          sudo rm -rf SlimeVR-Tracker-nRF-Receiver/build
-          mkdir SlimeVR-Tracker-nRF-Receiver/build
-
-          west build \
-              --board xiao_ble/nrf52840 \
-              --pristine=always SlimeVR-Tracker-nRF-Receiver \
-              --build-dir SlimeVR-Tracker-nRF-Receiver/build \
-              -- \
-              -DNCS_TOOLCHAIN_VERSION=NONE \
-              -DBOARD_ROOT=../SlimeVR-Tracker-nRF-Receiver
-
-          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.uf2 Releases/SlimeNRF_XIAO_Receiver.uf2
-
-      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - etee Dongle
-      # Receiver Firmware Build for etee Dongle
-        if: always()
-        run: |
-          cd zephyr-workspace
-          sudo rm -rf SlimeVR-Tracker-nRF-Receiver/build
-          mkdir SlimeVR-Tracker-nRF-Receiver/build
-
-          west build \
-              --board etee_dongle_uf2/nrf52840 \
-              --pristine=always SlimeVR-Tracker-nRF-Receiver \
-              --build-dir SlimeVR-Tracker-nRF-Receiver/build \
-              -- \
-              -DNCS_TOOLCHAIN_VERSION=NONE \
-              -DBOARD_ROOT=../SlimeVR-Tracker-nRF-Receiver
-
-          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.uf2 Releases/SlimeNRF_etee_Receiver.uf2
-
-      - name: 🔨 Build SlimeVR-Tracker-nRF-Receiver - nRF52840DK
-      # Receiver Firmware Build for Nordic nRF52840dk
-        if: always()
-        run: |
-          cd zephyr-workspace
-          find='.dt_size\s=\sDT_REG_SIZE(DT_PARENT(node_id))}'
-          sudo rm -rf SlimeVR-Tracker-nRF-Receiver/build
-          mkdir SlimeVR-Tracker-nRF-Receiver/build
-
-          west build \
-              --board nrf52840dk/nrf52840 \
-              --pristine=always SlimeVR-Tracker-nRF-Receiver \
-              --build-dir SlimeVR-Tracker-nRF-Receiver/build \
-              -- \
-              -DNCS_TOOLCHAIN_VERSION=NONE \
-              -DBOARD_ROOT=../SlimeVR-Tracker-nRF-Receiver
-
-          mv SlimeVR-Tracker-nRF-Receiver/build/SlimeVR-Tracker-nRF-Receiver/zephyr/zephyr.hex Releases/SlimeNRF_nRF52840dk_Receiver.hex
-
-      - name: 💾 Upload SlimeNRF_Nordic_eByte_Dongle_Receiver.hex
+      - name: 💾 Upload Artifact - ${{ matrix.boards.boardname }}
         if: always()
         uses: actions/upload-artifact@v4
         with:
           # Artifact name
-          name: SlimeNRF_Nordic_eByte_Dongle_Receiver.hex
+          name: ${{ matrix.boards.filename }}
           # A file, directory or wildcard pattern that describes what to upload
-          path: zephyr-workspace/Releases/SlimeNRF_Nordic_eByte_Dongle_Receiver.hex
-
-      - name: 💾 Upload SlimeNRF_SuperMini_Receiver.uf2
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          # Artifact name
-          name: SlimeNRF_SuperMini_Receiver.uf2
-          # A file, directory or wildcard pattern that describes what to upload
-          path: zephyr-workspace/Releases/SlimeNRF_SuperMini_Receiver.uf2
-
-      - name: 💾 Upload SlimeNRF_XIAO_Receiver.uf2
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          # Artifact name
-          name: SlimeNRF_XIAO_Receiver.uf2
-          # A file, directory or wildcard pattern that describes what to upload
-          path: zephyr-workspace/Releases/SlimeNRF_XIAO_Receiver.uf2
-
-      - name: 💾 Upload SlimeNRF_etee_Receiver.uf2
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          # Artifact name
-          name: SlimeNRF_etee_Receiver.uf2
-          # A file, directory or wildcard pattern that describes what to upload
-          path: zephyr-workspace/Releases/SlimeNRF_etee_Receiver.uf2
-
-      - name: 💾 Upload SlimeNRF_nRF52840dk_Receiver.hex
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          # Artifact name
-          name: SlimeNRF_nRF52840dk_Receiver.hex
-          # A file, directory or wildcard pattern that describes what to upload
-          path: zephyr-workspace/Releases/SlimeNRF_nRF52840dk_Receiver.hex
+          path: zephyr-workspace/Releases/${{ matrix.boards.filename }}
