--- a/sample.yaml
+++ b/sample.yaml
@@ -1,6 +1,7 @@
 tests:
   common:
     platform_allow:
+      - nrf21540dk/nrf52840
       - nrf52840dk/nrf52840
       - nrf52840dongle/nrf52840
       - xiao_ble/nrf52840
