move esb to thread and do not reboot on actions

--- a/prj.conf
+++ b/prj.conf
@@ -84,7 +84,7 @@ CONFIG_CRYPTO=n
 
 CONFIG_THREAD_NAME=y
 #CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=256
-#CONFIG_MAIN_STACK_SIZE=512
+CONFIG_MAIN_STACK_SIZE=512
 
 #CONFIG_HEAP_MEM_POOL_SIZE=2048
 CONFIG_ISR_STACK_SIZE=1024
