--- a/boards/holyiot/holyiot_21017/holyiot_21017_defconfig
+++ b/boards/holyiot/holyiot_21017/holyiot_21017_defconfig
@@ -7,7 +7,7 @@ CONFIG_GPIO=y
 CONFIG_USB_DEVICE_REMOTE_WAKEUP=n
 
 CONFIG_USB_DEVICE_MANUFACTURER="Holyiot"
-CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver Holyiot"
+CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver Holyiot-21017"
 
 CONFIG_LED_RGB_COLOR=y
 
