--- a/boards/kounolab/kounolab_dongle_uf2/kounolab_dongle_uf2.dts
+++ b/boards/kounolab/kounolab_dongle_uf2/kounolab_dongle_uf2.dts
@@ -6,16 +6,19 @@
 
 //move to dtsi?
 &pinctrl {
-	pwm0_default: pwm0_default {
+	spi0_default: spi0_default {
 		group1 {
-			psels = <NRF_PSEL(PWM_OUT0, 0, 15)>;
-			nordic,drive-mode = <NRF_DRIVE_D0S1>;
+			psels = <NRF_PSEL(SPIM_SCK, 0, 0)>,
+				<NRF_PSEL(SPIM_MISO, 0, 4)>,
+				<NRF_PSEL(SPIM_MOSI, 0, 1)>;
 		};
 	};
 
-	pwm0_sleep: pwm0_sleep {
+	spi0_sleep: spi0_sleep {
 		group1 {
-			psels = <NRF_PSEL(PWM_OUT0, 0, 15)>;
+			psels = <NRF_PSEL(SPIM_SCK, 0, 0)>,
+				<NRF_PSEL(SPIM_MISO, 0, 4)>,
+				<NRF_PSEL(SPIM_MOSI, 0, 1)>;
 			low-power-enable;
 		};
 	};
@@ -36,8 +39,14 @@
 	pwmleds {
 		compatible = "pwm-leds";
 		pwm_led0: pwm_led_0 {
-			pwms = <&pwm0 0 PWM_MSEC(1) PWM_POLARITY_NORMAL>;
+			pwms = <&sw_pwm 0 PWM_MSEC(10) PWM_POLARITY_INVERTED>;
 		};
+	};
+
+	nrf_radio_fem: nrf21540_fem {
+		compatible = "nordic,nrf21540-fem";
+		spi-if = <&nrf_radio_fem_spi>;
+		supply-voltage-mv = <3000>;
 	};
 
 	aliases {
@@ -49,8 +58,8 @@
 	};
 };
 
-&reg1 {
-	regulator-initial-mode = <NRF5X_REG_MODE_LDO>;
+&reg0 {
+	status = "okay";
 };
 
 &gpio0 {
@@ -61,11 +70,28 @@
 	status = "okay";
 };
 
-&pwm0 {
+&sw_pwm {
 	status = "okay";
-	pinctrl-0 = <&pwm0_default>;
-	pinctrl-1 = <&pwm0_sleep>;
+	channel-gpios = <&gpio0 2 (GPIO_ACTIVE_LOW | GPIO_OPEN_DRAIN)>;
+};
+
+fem_spi: &spi0 {
+	status = "okay";
+	cs-gpios = <&gpio0 5 GPIO_ACTIVE_LOW>;
+
+	pinctrl-0 = <&spi0_default>;
+	pinctrl-1 = <&spi0_sleep>;
 	pinctrl-names = "default", "sleep";
+	nrf_radio_fem_spi: nrf21540_fem_spi@0 {
+		compatible = "nordic,nrf21540-fem-spi";
+		status = "okay";
+		reg = <0>;
+		spi-max-frequency = <8000000>;
+	};
+};
+
+&radio {
+	fem = <&nrf_radio_fem>;
 };
 
 zephyr_udc0: &usbd {
@@ -74,12 +100,4 @@ zephyr_udc0: &usbd {
 	cdc_acm_uart0: cdc_acm_uart0 {
 		compatible = "zephyr,cdc-acm-uart";
 	};
-};
-
-&cryptocell {
-	status = "disabled";
-};
-
-&nfct {
-	status = "disabled";
 };
