--- a/boards/kounolab/kounolab_dongle_uf2/kounolab_dongle_uf2_defconfig
+++ b/boards/kounolab/kounolab_dongle_uf2/kounolab_dongle_uf2_defconfig
@@ -5,8 +5,8 @@ CONFIG_ARM_MPU=y
 CONFIG_HW_STACK_PROTECTION=y
 
 CONFIG_USB_DEVICE_MANUFACTURER="KOUNOLAB"
-CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver KOUNOLAB"
+CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver Stella"
 
-# #generate for adafruit uf2 bootloader flashing
-# CONFIG_BUILD_OUTPUT_UF2=y
-# CONFIG_FLASH_LOAD_OFFSET=0x1000
+#generate for adafruit uf2 bootloader flashing
+CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_FLASH_LOAD_OFFSET=0x1000
