remove useless fast startup mode set

--- a/prj.conf
+++ b/prj.conf
@@ -12,6 +12,8 @@ CONFIG_ESB=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
+CONFIG_FPU=y
+
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_HID=y
 CONFIG_USB_DEVICE_VID=0x1209
