--- a/boards/nordic/supermini_uf2/supermini_uf2_defconfig
+++ b/boards/nordic/supermini_uf2/supermini_uf2_defconfig
@@ -4,6 +4,7 @@
 CONFIG_ARM_MPU=y
 CONFIG_HW_STACK_PROTECTION=y
 
+CONFIG_USB_DEVICE_MANUFACTURER="SlimeVR"
 CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver ProMicro"
 
 #generate for adafruit uf2 bootloader flashing
