--- a/boards/slimevr/butterfly_p1/butterfly_p1_uf2_defconfig
+++ b/boards/slimevr/butterfly_p1/butterfly_p1_uf2_defconfig
@@ -6,7 +6,7 @@ CONFIG_HW_STACK_PROTECTION=y
 
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_MANUFACTURER="SlimeVR"
-CONFIG_USB_DEVICE_PRODUCT="SlimeVR Butterfly Receiver P1"
+CONFIG_USB_DEVICE_PRODUCT="SlimeNRF Receiver Butterfly P1"
 
 #generate for adafruit uf2 bootloader flashing
 CONFIG_BUILD_OUTPUT_UF2=y
