--- a/prj.conf
+++ b/prj.conf
@@ -78,7 +78,8 @@ CONFIG_MPU_ALLOW_FLASH_WRITE=y
 CONFIG_NVS_LOOKUP_CACHE=y
 
 CONFIG_ESB_TX_FIFO_SIZE=1
-CONFIG_NRFX_TIMER1=y
+# deprecated?
+#CONFIG_NRFX_TIMER1=y
 
 #speed up boot? (use internal rc oscillator)
 #CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
